[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptobot-utils"
version = "0.1.0"
description = "Internal utils for the trading bot"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["utils"]

[tool.setuptools.package-data]
utils = ["py.typed"]
